# qcost

./: CMakeLists.txt  LICENSE  README.md  config.pri  icons.qrc  qcost.pro
build-qcostdbwriter-Desktop-Debug/: ui_loadfromtxtdialog.h  ui_pricelistdbwidget.h
doc/: esempio-contabile.qct  vag-3.qct  vag-3_ap-ep.odt  vag-3_cme.odt  vag-3_sum.odt
libmathparser/: CMakeLists.txt  libmathparser.pro  mathparser.cpp  mathparser.h  mathparser_export.h
libodtcreator/: CMakeLists.txt  libodtcreator.pro  odtcreator_export.h  odtwriter.cpp  odtwriter.h  qtextformatuserdefined.h  zip.cpp  zipreader.h  zipwriter.h
libqcost/: CMakeLists.txt  accountingbill.cpp  accountingbill.h  accountingbillitem.cpp  accountingbillitem.h  accountingbillitemprivate.cpp  accountingbillitemprivate.h  accountingbills.cpp  accountingbills.h  accountinglsbill.cpp  accountinglsbill.h  accountinglsbillitem.cpp  accountinglsbillitem.h  accountinglsbills.cpp  accountinglsbills.h  accountinglsitemmeasure.cpp  accountinglsitemmeasure.h  accountinglsmeasure.cpp  accountinglsmeasure.h  accountinglsmeasuresmodel.cpp  accountinglsmeasuresmodel.h  accountingpricefieldmodel.cpp  accountingpricefieldmodel.h  accountingprinter.cpp  accountingprinter.h  accountingtambill.cpp  accountingtambill.h  accountingtambillitem.cpp  accountingtambillitem.h  accountingtambillitemprivate.cpp  accountingtambillitemprivate.h  accountingtammeasure.cpp  accountingtammeasure.h  accountingtammeasuresmodel.cpp  accountingtammeasuresmodel.h  attribute.cpp  attribute.h  attributemodel.cpp  attributemodel.h  attributesmodel.cpp  (+63 more)
qcostdbwriter/: loadfromtxtdialog.cpp  loadfromtxtdialog.h  loadfromtxtdialog.ui  main.cpp  pricelistdbdelegate.cpp  pricelistdbdelegate.h  pricelistdbmodel.cpp  pricelistdbmodel.h  pricelistdbwidget.cpp  pricelistdbwidget.h  pricelistdbwidget.ui  qcostdbwriter.pro  qcostdbwritergui.cpp  qcostdbwritergui.h  unitmeasuremodel.cpp  unitmeasuremodel.h
qcostgui/: CMakeLists.txt  accountingattributeprintergui.cpp  accountingattributeprintergui.h  accountingattributeprintergui.ui  accountingbilldatagui.cpp  accountingbilldatagui.h  accountingbilldatagui.ui  accountingbillgui.cpp  accountingbillgui.h  accountingbillmeasuresprintergui.cpp  accountingbillmeasuresprintergui.h  accountingbillmeasuresprintergui.ui  accountingbillpricedatagui.cpp  accountingbillpricedatagui.h  accountingbillpricedatagui.ui  accountingbillpricegui.cpp  accountingbillpricegui.h  accountingbillpricegui.ui  accountingbillprintergui.cpp  accountingbillprintergui.h  accountingbillprintergui.ui  accountingbillsetpricelistmodegui.cpp  accountingbillsetpricelistmodegui.h  accountinggui.cpp  accountinggui.h  accountinggui.ui  accountingitemattributemodel.cpp  accountingitemattributemodel.h  accountingitembillgui.cpp  accountingitembillgui.h  accountingitembillgui.ui  accountingitemcommentgui.cpp  accountingitemcommentgui.h  accountingitemcommentgui.ui  accountingitemlsgui.cpp  accountingitemlsgui.h  accountingitemlsgui.ui  accountingitempaymentgui.cpp  accountingitempaymentgui.h  accountingitempaymentgui.ui  (+158 more)
win/: qcost-x64.nsi  qcost-x86.nsi
